Closed
Bug 1461844
Opened 8 years ago
Closed 3 years ago
searches through the awesomebar should not get the "typed" visit bonus
Categories
(Firefox :: Address Bar, defect, P2)
Firefox
Address Bar
Tracking
()
RESOLVED
FIXED
106 Branch
People
(Reporter: mconnor, Assigned: daisuke)
References
(Depends on 1 open bug, Blocks 1 open bug)
Details
(Whiteboard: [fxsearch])
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
Post unification, this is a much bigger deal.
All searches through the unified awesomebar end up getting marked as TYPED, meaning they get a 20x boost and show up disproportionately vs. expectations. This is because loadURL calls addToUrlbarHistory, which marks everything as typed. But this will also apply to search URLs, which is probably not the ideal.
This means that I now almost always have search results in my awesomebar, which seems like a major change post-unification.
For now, I'd keep it as a standard visit, but I'd like to be able to weight these independently.
Comment 1•8 years ago
|
||
yes, this is pretty much bug 1330343, right?
Comment 2•8 years ago
|
||
Now that autofill doesn't depend on typed anymore, we could start fixing the meaning of typed.
Updated•8 years ago
|
Priority: -- → P2
Whiteboard: [fxsearch]
Updated•7 years ago
|
Component: Search → Address Bar
Updated•6 years ago
|
Blocks: qb-results-papercuts
Updated•6 years ago
|
Points: --- → 3
Updated•6 years ago
|
No longer blocks: qb-results-papercuts
Updated•5 years ago
|
Points: 3 → 5
| Assignee | ||
Comment 3•3 years ago
|
||
Depends on D153320
Updated•3 years ago
|
Assignee: nobody → daisuke
Status: NEW → ASSIGNED
Pushed by dakatsuka.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1a2602dec7ae
Add bonus for searched visit. r=mak
Comment 5•3 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
status-firefox106:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 106 Branch
Comment 6•3 years ago
|
||
| bugherder | ||
| Assignee | ||
Comment 7•3 years ago
|
||
Comment on attachment 9288236 [details]
Bug 1461844: Add bonus for searched visit.
Beta/Release Uplift Approval Request
- User impact if declined: When user searches, it is not handled correctly as searched visit, the display priority will not become correct.
- Is this code covered by automated tests?: Yes
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): The main changes are only 5 lines, and only change the value of the database for searched visits.
- String changes made/needed: No
- Is Android affected?: No
Attachment #9288236 -
Flags: approval-mozilla-beta?
Comment 8•3 years ago
|
||
This bug has been around for 4 years. Is there a Product-related reason driving the uplift request now?
Flags: needinfo?(daisuke)
| Assignee | ||
Comment 9•3 years ago
|
||
Yes. This is registered as https://mozilla-hub.atlassian.net/browse/SNT-240 which is included in https://mozilla-hub.atlassian.net/browse/SNT-189.
And, we want to ship all in 105.
Flags: needinfo?(daisuke)
Comment 10•3 years ago
|
||
That's good context to have, thanks!
Comment 11•3 years ago
|
||
Comment on attachment 9288236 [details]
Bug 1461844: Add bonus for searched visit.
Approved for 105.0b5.
Attachment #9288236 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 12•3 years ago
|
||
| bugherder uplift | ||
status-firefox105:
--- → fixed
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•