Bug 1461844: Add bonus for searched visit. r=mak, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D153557